--- a/LogIn.html
+++ b/LogIn.html
@@ -17,4 +17,14 @@
             </a>
     </div>
 </body>
+<script>
+    var Users = {
+        data : {
+            "edupinapa" : "Password",
+            "spikes" : "Password",
+            "vanni" : "Password",
+            "berkay" : "Password"
+        }
+    }
+</script>
 </html>
