--- a/Register.html
+++ b/Register.html
@@ -13,7 +13,7 @@
             <p class="TextoEmail">Please enter your password (Requiered)</p>
             <input class ="PasswordLI" type="password" placeholder="Password">
             <a href="LogIn.html">
-                <button class="LogIn">Log In</button>
+                <button class="LogIn">Sing Up</button>
             </a>
     </div>
 </body>
