--- a/Home.html
+++ b/Home.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="pictureContainer">
-            <img class="logo" src="Logo.png">
-        </div>
+        <a href="Register.html">
+            <div class="pictureContainer">
+                <img class="logo" src="Logo.png">
+            </div>
+        </a>
         <div class="textContainer">
             <h1 class="name">Reform The Norm</h1>
         </div>
