--- a/RTNWallet.html
+++ b/RTNWallet.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="pictureContainer">
-            <img class="logo" src="Logo.png">
-        </div>
+        <a href="Homepage.html">
+            <div class="pictureContainer">
+                <img class="logo" src="Logo.png">
+            </div>
+        </a>
         <div class="textContainer">
             <h1 class="name">500 RTM</h1>
         </div>
