Adding new html files

--- a/LogIn.html
+++ b/LogIn.html
@@ -10,6 +10,8 @@
             <h2 class="title">Log In</h2>
             <p class ="TextEmail">Please enter your email (Requiered)</p>
             <input class="EmailLI" type="email" placeholder="Email">
+            <p class="TextoEmail">Please enter your account number (Requiered)</p>
+            <input class ="PasswordLI" type="password" placeholder="Account Number">
             <p class="TextoEmail">Please enter your password (Requiered)</p>
             <input class ="PasswordLI" type="password" placeholder="Password">
             <a href="Homepage.html">
