--- a/PlacesPhilippines.html
+++ b/PlacesPhilippines.html
@@ -78,58 +78,13 @@
     </header>
     <div class="container">
         <div class="containerButton">
-            <a href="PlacesAfganistan.html">
-                <button class="button">Afganistan</button>
+            <a href="https://junkterrorbill.carrd.co/">
+                <button class="button">Educate</button>
             </a>
         </div>
         <div class="containerButtonRight">
-            <a href="PlacesChile.html">
-                <button class="button">Chile</button>
-            </a>
-        </div>
-        <div class="containerButton">
-            <a href="PlacesChina.html">
-                <button class="button">China</button>
-            </a>
-        </div>
-        <div class="containerButtonRight">
-            <a href="PlacesHongKong.html">
-                <button class="button">Hong Kong</button>
-            </a>
-        </div>
-        <div class="containerButton">
-            <a href="PlacesIndia.html">
-                <button class="button">India</button>
-            </a>
-        </div>
-        <div class="containerButtonRight">
-            <a href="PlacesIraq.html">
-                <button class="button">Iraq </button>
-            </a>
-        </div>
-        <div class="containerButton">
-            <a href="PlacesKurdistan.html">
-                <button class="button">Kurdistan</button>
-            </a>
-        </div>
-        <div class="containerButtonRight">
-            <a href="PlacesLebanon.html">
-                <button class="button">Lebanon</button>
-            </a>
-        </div>
-        <div class="containerButton">
-            <a href="PlacesMexico.html">
-                <button class="button">Mexico</button>
-            </a>
-        </div>
-        <div class="containerButtonRight">
-            <a href="PlacesPalestine.html">
-                <button class="button">Palestine</button>
-            </a>
-        </div>
-        <div class="containerButton">
-            <a href="PlacesPhilippines.html">
-                <button class="button">Philippines</button>
+            <a href="https://www.change.org/p/urgent-appeal-to-veto-anti-terrorism-bill?utm_content=cl_sharecopy_23210392_en-US%3A0&recruiter=844048530&recruited_by_id=519f3900-e516-11e7-831e-d9e7ad571c55&utm_source=share_petition&utm_medium=copylink&utm_campaign=psf_combo_share_initial&utm_term=psf_combo_share_abi">
+                <button class="button">Donate</button>
             </a>
         </div>
     </div>
