--- a/Register.html
+++ b/Register.html
@@ -10,9 +10,11 @@
             <h2 class="title">Register</h2>
             <p class ="TextEmail">Please enter your email (Requiered)</p>
             <input class="EmailLI" type="email" placeholder="Email">
+            <p class="TextoEmail">Please enter your account number (Requiered)</p>
+            <input class ="PasswordLI" type="password" placeholder="Account Number">
             <p class="TextoEmail">Please enter your password (Requiered)</p>
             <input class ="PasswordLI" type="password" placeholder="Password">
-            <a href="LogIn.html">
+            <a href="RegisterBonus.html">
                 <button class="LogIn">Sing Up</button>
             </a>
     </div>
