--- a/RegisterBonus.html
+++ b/RegisterBonus.html
@@ -2,18 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Reform The Norm</title>
+    <title>Bonus</title>
     <link rel = "stylesheet" type="text/css" href="StyleRTNWallet.css">
 </head>
 <body>
     <div class="container">
-        <a href="Homepage.html">
+        <a href="LogIn.html">
             <div class="pictureContainer">
                 <img class="logo" src="Logo.png">
             </div>
         </a>
         <div class="textContainer">
             <h1 class="name">500 RTN</h1>
+            <br>
+            <h1>CONGRATULATIONS !!!</h1>
         </div>
     </div>
 </body>
