--- a/PlacesIraq.html
+++ b/PlacesIraq.html
@@ -78,58 +78,13 @@
     </header>
     <div class="container">
         <div class="containerButton">
-            <a href="PlacesAfganistan.html">
-                <button class="button">Afganistan</button>
+            <a href="https://www.bbc.com/news/amp/world-middle-east-50595212">
+                <button class="button">Educate</button>
             </a>
         </div>
         <div class="containerButtonRight">
-            <a href="PlacesChile.html">
-                <button class="button">Chile</button>
-            </a>
-        </div>
-        <div class="containerButton">
-            <a href="PlacesChina.html">
-                <button class="button">China</button>
-            </a>
-        </div>
-        <div class="containerButtonRight">
-            <a href="PlacesHongKong.html">
-                <button class="button">Hong Kong</button>
-            </a>
-        </div>
-        <div class="containerButton">
-            <a href="PlacesIndia.html">
-                <button class="button">India</button>
-            </a>
-        </div>
-        <div class="containerButtonRight">
-            <a href="PlacesIraq.html">
-                <button class="button">Iraq </button>
-            </a>
-        </div>
-        <div class="containerButton">
-            <a href="PlacesKurdistan.html">
-                <button class="button">Kurdistan</button>
-            </a>
-        </div>
-        <div class="containerButtonRight">
-            <a href="PlacesLebanon.html">
-                <button class="button">Lebanon</button>
-            </a>
-        </div>
-        <div class="containerButton">
-            <a href="PlacesMexico.html">
-                <button class="button">Mexico</button>
-            </a>
-        </div>
-        <div class="containerButtonRight">
-            <a href="PlacesPalestine.html">
-                <button class="button">Palestine</button>
-            </a>
-        </div>
-        <div class="containerButton">
-            <a href="PlacesPhilippines.html">
-                <button class="button">Philippines</button>
+            <a href="https://www.change.org/p/united-nations-protect-protesters-rights-and-lives-in-iraq?recruiter=972348989&recruited_by_id=60e6c0b0-8fc7-11e9-8bc0-2fe37d48d943&utm_source=share_petition&utm_medium=copylink&utm_campaign=psf_combo_share_abi&utm_term=psf_combo_share_initial">
+                <button class="button">Donate</button>
             </a>
         </div>
     </div>
